--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1092,6 +1092,100 @@
 
 // end section news
 
+// start section product
+.product{
+  padding-top: 0;
+}
+.product__wrapper{
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 50px;
+}
+.slider-for{
+  max-width: 860px;
+  width: 100%;
+}
+.product1-img{
+  width: 860px;
+  height: 600px;
+ 
+  
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.product__box{
+  margin-left: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+.product__text{
+  margin-bottom: 20px;
+}
+.product__inner{
+  width: 100%;
+}
+.product__inners{
+
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 15px;
+  &:last-child{
+    margin-bottom: 0;
+  }
+  &::before{
+    position: absolute;
+    content: '';
+    left: 0;
+    right: 0;
+    top: 22px;
+    border-bottom: 1px dashed rgba(0, 224, 255, 0.5);
+    ;
+  }
+}
+.product__feature{
+  padding-left: 10px;
+  max-width: 253px;
+  width: 100%;
+  text-align-last: left;
+}
+.product__descr{
+  padding-right: 10px;
+  max-width: 232px;
+  width: 100%;
+  text-align: right;
+}
+
+.slider-nav{
+  margin-bottom: 50px;
+}
+
+.product2-img{
+  width: 265px;
+  height: 185px;
+}
+// end section product
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @import 'media';
