--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1113,8 +1113,6 @@
 .product1-img {
   width: 860px;
   height: 600px;
-
-
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1179,7 +1177,11 @@
   width: 265px;
   height: 185px;
 }
-
+.product2.slick-slide.slick-current.slick-active.slick-center {
+  .product2-img {
+    border: 2px solid $neon-blue;
+  }
+}
 // end section product
 
 // start section article
@@ -1236,28 +1238,6 @@
   width: 382px;
   height: 287px;
   margin-top: 40px;
-  position: relative;
-
-  // &:hover {
-  //   &::after {
-  //     background-color: rgba(0, 32, 46, 0.0);
-  //   }
-  // }
-
-  // &::after {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   z-index: 10;
-  //   background-color: rgba(0, 32, 46, 0.7);
-  //   width: 100%;
-  //   height: 100%;
-  //   border: 2px solid transparent;
-  //   transition-duration: 2s;
-  // }
 }
 
 
@@ -1274,9 +1254,6 @@
 
 }
 
-// .article__slider.slick-track{
-//   height: 500px;
-// }
 .article__item.slick-slide.slick-current.slick-active.slick-center {
   width: 508px;
   height: 470px;
@@ -1286,6 +1263,7 @@
     width: 484px;
     height: 364px;
     margin-bottom: 30px;
+    border: 2px solid $neon-blue;
   }
 
   .article__item__text {
