--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -573,6 +573,7 @@ body {
   position: fixed;
   z-index: 2;
   top: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   background: rgba(1, 23, 32, 0.7);
@@ -595,8 +596,8 @@ body {
 .capture__inner {
   border: 3px solid $neon-blue;
   position: relative;
-  width: 636px;
-  height: 403px;
+  max-width: 636px;
+  width: 100%;
   padding: 60px 30px 40px;
   text-align: center;
   background: rgba(0, 32, 46, 0.8);
@@ -606,6 +607,7 @@ body {
   margin-bottom: 50px;
 }
 .capture__item {
-  width: 300px !important;
+  max-width: 300px !important;
+  width: 100%;
   margin: 0 auto;
 }
