--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -3,26 +3,22 @@
     width: 735px;
   }
 
-  .article__item {
-    width: 290px;
-    height: 218px;
-    margin-top: 40px;
-  }
-
   .article__img {
     width: 290px;
     height: 218px;
   }
 
   .article__item.slick-slide.slick-current.slick-active.slick-center {
-    width: 508px;
-    height: 372px;
-    margin-top: 0;
+    max-width: 508px;
+    height: 380px;
+
+    .article__inners {
+      max-width: 410px;
+      height: 310px;
+    }
 
     .article__img {
-      width: 400px;
       height: 300px;
-      margin-bottom: 30px;
     }
   }
 }
@@ -114,16 +110,20 @@
     width: 435px;
   }
 
-  .article__inner {
-    max-width: 800px;
-    width: 100%;
+  .article__item__text {
+    display: block;
+    max-width: 290px;
     margin: 0 auto;
+    padding-top: 15px;
   }
 
-  .article__item.slick-slide.slick-current.slick-active.slick-center {
-    .article__img {
-      text-align: center;
-    }
+  .article__item {
+    margin-top: 0;
+  }
+
+  .article__inners {
+    max-width: 290px;
+    margin: 0 auto;
   }
 
 }
@@ -706,15 +706,17 @@
     max-width: 165px;
     height: 115px;
   }
+
   .product2.slick-slide.slick-current.slick-active.slick-center {
     .product2-wrapper {
       max-width: 177px;
     }
   }
-    .capture__inner {
-      margin-left: 30px;
-      margin-right: 30px;
-    }
+
+  .capture__inner {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 
 }
 
@@ -797,15 +799,6 @@
     max-width: 396px;
   }
 
-  .article__item.slick-slide.slick-current.slick-active.slick-center {
-    height: 317px;
-
-    .article__img {
-      width: 340px;
-      height: 256px;
-      margin-bottom: 20px;
-    }
-  }
 
 }
 
@@ -990,7 +983,10 @@
       padding-top: 20px;
     }
   }
-
+.article__up-img{
+  width: 300px;
+  height: 201px;
+}
   .article__inner {
     .slick-dots {
       padding-top: 20px;
@@ -998,23 +994,6 @@
     }
   }
 
-  .article__item {
-    height: 275px;
-
-  }
-
-  .article__img {
-    margin-bottom: 20px;
-  }
-
-  .article__item__text {
-    display: block;
-  }
-
-  .article__up-img {
-    width: 300px;
-    height: 201px;
-  }
 }
 
 // ВЕРТИКАЛЬ ВНИЗ!!!
@@ -1059,6 +1038,7 @@
   .news__info {
     width: 291px;
   }
+
   .product2-img {
     max-width: 132px;
     height: 96px;
@@ -1088,4 +1068,15 @@
       margin-left: 0;
     }
   }
+
+  .article__item {
+    height: 260px;
+
+  }
+
+  .article__img {
+    width: 250px;
+    height: 218px;
+  }
+
 }
