--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -465,16 +465,19 @@
 }
 
 .reviews__item-wrapper {
-  background-color: rgba(0, 45, 66, 0.7);
   backdrop-filter: blur(1px);
+  background-color: rgba(0, 45, 66, 0.7);
   padding: 75px;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  z-index: 1;
 }
 
 .reviews__info {
   padding-right: 30px;
+
 
 }
 
@@ -977,6 +980,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  position: relative;
   z-index: 1;
 }
 
@@ -1284,21 +1288,24 @@
   max-width: 508px;
   height: 460px;
   margin-top: 0;
- .article__inners {
-   max-width: 496px;
-    height: 376px ;
-   padding: 5px;
-   border: 1px solid $neon-blue;
-   margin: 0 auto;
-   border-radius: 3px;
-   margin-bottom: 20px;
- }
+
+  .article__inners {
+    max-width: 496px;
+    height: 376px;
+    padding: 5px;
+    border: 1px solid $neon-blue;
+    margin: 0 auto;
+    border-radius: 3px;
+    margin-bottom: 20px;
+  }
+
   .article__img {
     max-width: 484px;
     width: 100%;
     height: 364px;
     border-radius: 3px;
   }
+
   .article__item__text {
     display: block;
     margin: 0 auto;
