--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -517,6 +517,9 @@
 
 .reviews__info-text {
   margin-bottom: 50px;
+  height: 185px;
+  overflow-y: scroll;
+  padding-right: 5px;
 }
 
 .reviews__info-link {
