--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,6 +10,19 @@ body {
   margin: 0 auto;
   background-color: $black;
 }
+::-webkit-scrollbar{
+  width: 12px;
+}
+::-webkit-scrollbar-track{
+  background-color: $black;
+    border-radius: 8px;
+    position: relative;
+}
+::-webkit-scrollbar-thumb{
+  background-color: $neon-blue;
+  border-radius: 8px;
+  border: 3px solid $black;
+}
 
 .wrapper {
   display: flex;
