fix scroll reviews and h2 in index section reviews+ br br in section article

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -518,7 +518,7 @@
 .reviews__info-text {
   margin-bottom: 50px;
   height: 185px;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-right: 5px;
 }
 
