--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,6 +1,6 @@
 @media(max-width: 1600px) {
   .menu.active {
-    width: 735px;
+    width: 580px;
   }
 
   .article__img {
@@ -95,8 +95,9 @@
 @media(max-width: 1300px) {
   .footer__item-contacts {
     display: flex;
-    justify-content: space-between;
-    width: 860px;
+    justify-content: flex-end;
+    max-width: 705px;
+    width: 100%;
   }
 
   .footer__btn-wrapper {
@@ -106,9 +107,6 @@
     margin-left: 30px;
   }
 
-  .footer__social {
-    width: 435px;
-  }
 
   .article__item__text {
     display: block;
@@ -147,7 +145,7 @@
     margin-bottom: 20px;
   }
 
-  .reviews__info-text{
+  .reviews__info-text {
     height: 100px;
     margin-right: auto;
     margin-bottom: 20px;
@@ -339,10 +337,6 @@
     width: 330px;
   }
 
-  .footer__item-contacts {
-    width: 825px;
-  }
-
   .devscreen {
     height: 750px;
   }
@@ -389,10 +383,6 @@
     overflow-x: hidden;
   }
 
-  .header {
-    padding: 15px 0;
-  }
-
   .devscreen__box {
     margin-top: 100px;
   }
@@ -407,25 +397,10 @@
     }
   }
 
-  .footer__item-contacts {
-    display: flex;
-    flex-wrap: wrap;
-    width: 651px;
-  }
-
-  .footer__btn-wrapper {
-    width: 156px;
-    margin-left: auto;
-    display: block;
-  }
-
   .footer__item {
     margin-bottom: 30px;
   }
 
-  .footer__item-contacts {
-    margin-bottom: 0;
-  }
 
   .work__box {
     padding: 0 30px;
@@ -485,13 +460,12 @@
   .menu.active {
     padding-top: 50px;
   }
-}
-
-@media(max-height: 800px) {
   .menu__mobil-list {
     margin-bottom: 25px;
   }
+}
 
+@media(max-height: 800px) {
   .menu-mobil-services {
     margin: 30px 0 30px 15px;
   }
@@ -598,23 +572,21 @@
     width: 320px;
   }
 
-  .footer__item-contacts {
-    max-width: 470px;
-    width: 100%;
-  }
+   .footer__item-contacts {
+     display: flex;
+     flex-wrap: wrap;
+     max-width: 463px;
+        margin-bottom: 0;
+   }
+
+   .footer__btn-wrapper {
+     width: 156px;
+     margin-left: auto;
+     display: block;
+   }
 
   .footer__menu-mobil {
-    margin-left: 0;
-  }
-
-  .footer__btn-wrapper {
-    margin-left: 0;
-    margin-right: auto;
-  }
-
-  .footer__social {
-    max-width: 435px;
-    width: 100%;
+    margin-left: 15px;
   }
 
   .footer__item-requisites {
@@ -673,11 +645,12 @@
 @media(max-height: 750px) {
   .menu.active {
     width: 100%;
-    padding: 50px;
+    padding: 37px 15px 35px;
   }
 
   .menu__mobil-box {
-    width: 235px;
+    width: 285px;
+    margin-bottom: 15px;
   }
 
   .menu__mobil-social--list {
@@ -687,6 +660,7 @@
   .menu__wrapper {
     justify-content: center;
     align-items: flex-end;
+ 
   }
 
   .menu__mobil-btn {
@@ -694,12 +668,11 @@
   }
 
   .menu__mobil-box {
-    margin-left: 50px;
     text-align: right;
   }
 
   .menu-mobil-services {
-    margin: 0;
+    margin: 25px 0px 25px 15px;
   }
 
   .menu__mobil-list {
@@ -718,11 +691,6 @@
     .product2-wrapper {
       max-width: 177px;
     }
-  }
-
-  .capture__inner {
-    margin-left: 30px;
-    margin-right: 30px;
   }
 
 }
@@ -827,35 +795,12 @@
     margin-top: 150px;
   }
 
-
-
   .screen__subtitle,
   .devscreen__subtitle {
     font-size: 24px;
     line-height: 26px;
     padding-top: 10px;
     letter-spacing: 0;
-  }
-
-  .global__social {
-    height: 120px;
-  }
-
-  .global__social-list {
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-    &+.global__social-list {
-      margin-left: 0px;
-    }
-  }
-
-  .global__social-list--link.global-btn {
-    margin: 0;
-  }
-
-  .global__social-list--link {
-    margin-bottom: 30px;
   }
 
   .benefits__subtitle,
@@ -902,16 +847,19 @@
 
   .footer__btn-wrapper {
     display: block;
+    margin-left: 0;
   }
 
-  .footer__item-contacts,
   .menu__mobil-box {
-    width: 300px;
+    width: 310px;
   }
 
   .footer__item-contacts {
+    width: 300px;
     margin-bottom: 0;
+    justify-content: flex-start;
   }
+
 
   .about__box-img {
     width: 166px;
@@ -1064,6 +1012,9 @@
 
 
 @media(max-width: 380px) {
+  .menu-mobil-services {
+    margin-left: 15px;
+  }
 
   .screen__title {
     font-size: 28px;
