--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,7 +5,7 @@
 
 // start header
 .header {
-  padding: 30px 0;
+  padding: 15px 0;
   position: fixed;
   top: 0;
   left: 0;
@@ -653,7 +653,8 @@
 }
 
 .footer__item-contacts {
-  width: 470px;
+  width: 310px;
+  text-align: right;
 }
 
 .footer__menu-list {
