--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -66,16 +66,41 @@ body {
 
 .title {
   @extend %Forum-Regular;
+   padding: 0 10px;
   font-size: 36px;
   line-height: 40px;
-  text-align: center;
   margin: 0 auto;
+  text-align: center;
   margin-bottom: 50px;
   max-width: fit-content;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 
+.start__title {
+  font-size: 40px;
+  line-height: 50px;
+  margin: 0 auto;
+   margin-bottom: 30px;
+  max-width: fit-content;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.devscreen__title {
+  text-transform: uppercase;
+  font-size: 48px;
+  line-height: 50px;
+  margin-bottom: 50px;
+  letter-spacing: 2px;
+}
+
+.devscreen__subtitle {
+  padding-top: 15px;
+  font-size: 24px;
+  line-height: 30px;
+  @extend %Forum-Regular;
+  letter-spacing: 2px;
+}
 .subtitle {
   max-width: 1920px;
   margin: 0 auto;
@@ -201,9 +226,10 @@ body {
 
 // ЛОГОТИП
 // ВЫЕЗЖАЮЩЕЕ МЕНЮ
-.global__social{
+.global__social {
   height: 43px;
 }
+
 .global__social-list {
   display: inline-block;
 
@@ -383,11 +409,11 @@ body {
   list-style: none;
 
   button {
-    background-color: #F1FCFF;
-    border: none;
+    background-color: transparent;
+    border: 2px solid #787878;
     border-radius: 50%;
-    height: 15px;
-    width: 15px;
+    height: 18px;
+    width: 18px;
     margin: 20px;
     font-size: 0;
     margin-bottom: 0;
@@ -396,7 +422,8 @@ body {
 }
 
 .slick-dots li[class="slick-active"] button {
-  background-color: $neon-blue;
+  background-color: transparent;
+  border: 2px solid $neon-blue;
 }
 
 
@@ -467,22 +494,7 @@ body {
   margin-top: 130px;
 }
 
-.devscreen__title,
-.start__title {
-  text-transform: uppercase;
-  font-size: 48px;
-  line-height: 50px;
-  margin-bottom: 50px;
-  letter-spacing: 2px;
-}
 
-.devscreen__subtitle {
-  padding-top: 15px;
-  font-size: 24px;
-  line-height: 30px;
-  @extend %Forum-Regular;
-  letter-spacing: 2px;
-}
 
 .devscreen__text {
   margin-bottom: 50px;
