--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -66,7 +66,7 @@ body {
 
 .title {
   @extend %Forum-Regular;
-   padding: 0 10px;
+  padding: 0 10px;
   font-size: 36px;
   line-height: 40px;
   margin: 0 auto;
@@ -81,11 +81,12 @@ body {
   font-size: 40px;
   line-height: 50px;
   margin: 0 auto;
-   margin-bottom: 30px;
+  margin-bottom: 30px;
   max-width: fit-content;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
+
 .devscreen__title {
   text-transform: uppercase;
   font-size: 48px;
@@ -101,6 +102,7 @@ body {
   @extend %Forum-Regular;
   letter-spacing: 2px;
 }
+
 .subtitle {
   max-width: 1920px;
   margin: 0 auto;
@@ -301,10 +303,10 @@ body {
   &.active {
     display: block;
     position: absolute;
-    top: 0px;
-    right: 0;
+    top: -16px;
+    right: auto;
     bottom: 0;
-    width: 720px;
+    width: 100%;
     height: 100vh;
     padding: 50px 0 0px 50px;
     font-size: 18px;
@@ -316,10 +318,13 @@ body {
 
 .menu-mobil {
   height: fit-content;
+  // max-width: 450px;
+  // width: 100%;
 }
 
 .menu__mobil-btn {
   margin-bottom: 30px;
+  margin-left: auto;
 }
 
 .menu__wrapper {
@@ -327,10 +332,12 @@ body {
   align-content: space-between;
   flex-wrap: wrap;
   height: 100%;
+  width: 490px;
 }
 
 .menu__mobil-box {
   margin-bottom: 40px;
+  margin-left: auto;
 }
 
 .menu-mobil-services {
