--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,8 +1,4 @@
 @media(max-width: 1600px) {
-  .menu.active {
-    width: 580px;
-  }
-
   .article__img {
     width: 290px;
     height: 218px;
@@ -240,7 +236,22 @@
     width: 520px;
     font-size: 14px;
     line-height: 17px;
+    right: 0;
+    top: 0;
+    padding-right: 50px;
   }
+
+  .menu__wrapper {
+    width: auto;
+  }
+
+  .menu__mobil-box {
+    width: 100%;
+    margin-left: auto;
+    text-align: right;
+
+  }
+
 
   .footer__menu-list--link,
   .footer__menu-list {
@@ -250,6 +261,10 @@
 
   .menu-mobil-services {
     margin: 30px 0 30px 30px;
+  }
+
+  .header__line {
+    position: inherit;
   }
 
   .header__social {
@@ -389,10 +404,12 @@
         height: 46px;
       }
     }
+
     .slick-prev {
       left: 0px;
-   
+
     }
+
     .slick-next {
       right: 0px;
     }
@@ -419,7 +436,7 @@
 
   .menu {
     &.active {
-      padding: 35px 0 35px 35px;
+      padding: 35px;
     }
   }
 
@@ -483,19 +500,12 @@
 
 // ВЕРТИКАЛЬ ВНИЗ!!!
 @media(max-height: 900px) {
-  .menu.active {
-    padding-top: 50px;
-  }
-
   .menu__mobil-list {
     margin-bottom: 25px;
   }
 }
 
 @media(max-height: 800px) {
-  .menu-mobil-services {
-    margin: 30px 0 30px 15px;
-  }
 
   .slider-for {
     max-width: 560px;
@@ -747,6 +757,7 @@
   .menu.active {
     width: 100%;
     padding-left: 15px;
+    padding-right: 15px;
   }
 
   .screen__title,
@@ -822,10 +833,11 @@
     width: 100%;
     height: 275px;
   }
- .product2-img {
-   max-width: 93px;
-   height: 65px;
- }
+
+  .product2-img {
+    max-width: 93px;
+    height: 65px;
+  }
 
   .slider-for.slick-initialized.slick-slider {
     max-width: 396px;
@@ -1010,9 +1022,10 @@
       margin-bottom: 30px;
     }
   }
-.slider-nav__wrapper{
-  padding: 0;
-}
+
+  .slider-nav__wrapper {
+    padding: 0;
+  }
 }
 
 // ВЕРТИКАЛЬ ВНИЗ!!!
@@ -1118,11 +1131,13 @@
       max-width: 114px;
     }
   }
-  .product__inner-btn{
+
+  .product__inner-btn {
     display: flex;
     flex-wrap: wrap;
   }
-  .product__btn{
+
+  .product__btn {
     margin-left: 0;
     margin-top: 30px;
   }
