--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,24 +1,3 @@
-@media(max-width: 1600px) {
-  .article__img {
-    width: 290px;
-    height: 218px;
-  }
-
-  .article__item.slick-slide.slick-current.slick-active.slick-center {
-    max-width: 508px;
-    height: 380px;
-
-    .article__inners {
-      max-width: 410px;
-      height: 310px;
-    }
-
-    .article__img {
-      height: 300px;
-    }
-  }
-}
-
 @media(max-width: 1450px) {
 
   .spec__text,
@@ -74,17 +53,25 @@
     width: 502px !important;
   }
 
-  .article__wrapper {
+  .article__item {
     flex-wrap: wrap;
   }
 
-  .article__up-img {
+  .article__img {
     margin: 0 auto;
     margin-bottom: 30px;
   }
 
   .article__info {
     margin-left: 0;
+  }
+
+  .article__box {
+    margin: 0 auto;
+  }
+
+  .article__inner-btn {
+    justify-content: center;
   }
 }
 
@@ -104,21 +91,7 @@
   }
 
 
-  .article__item__text {
-    display: block;
-    max-width: 290px;
-    margin: 0 auto;
-    padding-top: 15px;
-  }
 
-  .article__item {
-    margin-top: 0;
-  }
-
-  .article__inners {
-    max-width: 290px;
-    margin: 0 auto;
-  }
 
 }
 
@@ -685,7 +658,7 @@
     padding: 45px;
   }
 
-  .article__up-img {
+  .article__img {
     width: 435px;
     height: 264px;
   }
@@ -1011,17 +984,11 @@
     }
   }
 
-  .article__up-img {
+  .article__img {
     width: 300px;
     height: 201px;
   }
 
-  .article__inner {
-    .slick-dots {
-      padding-top: 20px;
-      margin-bottom: 30px;
-    }
-  }
 
   .slider-nav__wrapper {
     padding: 0;
@@ -1111,15 +1078,7 @@
     }
   }
 
-  .article__item {
-    height: 260px;
 
-  }
-
-  .article__img {
-    width: 250px;
-    height: 218px;
-  }
 
   .product2-img {
     max-width: 100px;
@@ -1140,5 +1099,14 @@
   .product__btn {
     margin-left: 0;
     margin-top: 30px;
+  }
+
+  .article__inner-btn {
+    flex-wrap: wrap;
+  }
+
+  .article__btn {
+    margin-left: 0;
+     margin-top: 30px;
   }
 }
