--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1072,6 +1072,7 @@
 .news__img {
   width: 577px;
   height: 350px;
+  border-radius: 5px;
 }
 
 .news__info {
@@ -1240,25 +1241,22 @@
   padding-top: 0;
 }
 
-.article__wrapper {
+.article__item{
   display: flex;
   justify-content: flex-start;
-  margin-bottom: 50px;
 }
 
 .article__info {
   margin-left: 75px;
 }
 
-.article__up-img {
+.article__img {
   width: 577px;
   height: 350px;
   margin-bottom: 50px;
+  border-radius: 5px;
 }
 
-.article__date {
-  margin-bottom: 50px;
-}
 
 .article__text {
   margin-bottom: 50px;
@@ -1268,10 +1266,22 @@
   color: $neon-blue;
   transition: all .3s;
   border-bottom: 1px solid transparent;
+  margin-bottom: 50px;
 
   &:hover {
     border-bottom: 1px solid $neon-blue;
   }
+}
+.article__box{
+  max-width: 680px;
+  width: 100%;
+  margin-left: 652px;
+}
+.article__inner-btn{
+  display: flex;
+}
+.article__btn{
+  margin-left: 30px;
 }
 
 .article__down-link {
@@ -1279,61 +1289,6 @@
 }
 
 
-
-
-
-.article__inner {
-  position: relative;
-  margin-bottom: 50px;
-}
-
-.article__item {
-  width: 382px;
-  height: 287px;
-  margin-top: 40px;
-}
-
-
-.article__item__text {
-  display: none;
-  text-align: center;
-
-}
-
-.article__img {
-  width: 382px;
-  height: 287px;
-  margin: 0 auto;
-  border-radius: 3px;
-}
-
-.article__item.slick-slide.slick-current.slick-active.slick-center {
-  max-width: 508px;
-  height: 460px;
-  margin-top: 0;
-
-  .article__inners {
-    max-width: 496px;
-    height: 376px;
-    padding: 5px;
-    border: 1px solid $neon-blue;
-    margin: 0 auto;
-    border-radius: 3px;
-    margin-bottom: 20px;
-  }
-
-  .article__img {
-    max-width: 484px;
-    width: 100%;
-    height: 364px;
-    border-radius: 3px;
-  }
-
-  .article__item__text {
-    display: block;
-    margin: 0 auto;
-  }
-}
 
 // end section article
 
