--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -305,9 +305,9 @@ body {
     position: absolute;
     top: -16px;
     right: auto;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
-    height: 100vh;
+    height: 101vh;
     padding: 50px 0 0px 50px;
     font-size: 18px;
     line-height: 22px;
