fix padding header adaptive 500px, + mb 100px adaptive 500px

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -834,7 +834,9 @@
 }
 
 @media(max-width: 500px) {
-
+  .header{
+    padding: 6px 0;
+  }
   .header__phone {
     display: none;
   }
@@ -896,6 +898,7 @@
 
   .menu__mobil-box {
     width: 310px;
+    margin-bottom: 100px;
   }
 
   .footer__item-contacts {
