fix logo adaptive 500px

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -834,8 +834,16 @@
 }
 
 @media(max-width: 500px) {
+  .logo{
+    width: 105px;
+    height: 40px;
+    img{
+        width: 105px;
+    height: 40px;
+    }
+  }
   .header{
-    padding: 6px 0;
+    padding: 12px 0;
   }
   .header__phone {
     display: none;
